@@ -8,6 +8,8 @@
 -> printf to be done from left to right
 -> align comments
 -> nested function mein offset multiplier not changing rightly
+-> cond is constant case for for ko check karo
+-> implement is_null function for statements
 
 --------------------------------------------------------------
 float gcd(int a, int b, int c, float f1, float f2, int d){
